changes done in object

--- a/supersimpledev_yt/08_object.html
+++ b/supersimpledev_yt/08_object.html
@@ -18,5 +18,9 @@
 
     person.Branch='Computer Science';
     console.log(person);
+
+    delete person.age;
+
+    console.log(person);
 </script>
 </html>
